kubernetes/poi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poi-deployment
  labels:
    app: poi-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: poi
  template:
    metadata:
      labels:
        app: poi
    spec:
      containers:
      - name: poi
        image: registrytjp0542.azurecr.io/tripinsights/poi:latest
        ports:
        - containerPort: 80
