kubernetes/trips.yaml
apiVersion: v1
kind: Service
metadata:
  name: trips
  namespace: api  
  labels:
    app: trips
spec:
  ports:
    - port: 80
  selector:
    app: trips
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trips-deployment
  namespace: api
  labels:
    app: trips
spec:
  selector:
    matchLabels:
      app: trips
  template:
    metadata:
      labels:
        app: trips
    spec:
      containers:
      - image: registrytjp0542.azurecr.io/tripinsights/trips:latest
        name: trips
        ports:
        - containerPort: 80
          name: trips
        volumeMounts:
        - name: secrets-store-inline
          mountPath: "/secrets"
          readOnly: true
      volumes:
        - name: secrets-store-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "azure-kvname"
