kubernetes/tripviewer.yaml
  
apiVersion: v1
kind: Service
metadata:
  name: tripviewer-service
  namespace: web
  labels:
    app: tripviewer
spec:
  type: LoadBalancer
  ports:
    - port: 80
  selector:
    app: tripviewer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tripviewer-deployment
  namespace: web
  labels:
    app: tripviewer
spec:
  selector:
    matchLabels:
      app: tripviewer
  template:
    metadata:
      labels:
        app: tripviewer
    spec:
      containers:
      - name: tripviewer
        image: registrytjp0542.azurecr.io/tripinsights/tripviewer:latest
        ports:
        - containerPort: 80
          name: tripviewer
