kubernetes/user-java.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-java-service
  labels:
    app: user-java
spec:
  ports:
    - port: 80
  selector:
    app: user-java
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-java-deployment
  labels:
    app: user-java-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-java
  template:
    metadata:
      labels:
        app: user-java
    spec:
      containers:
      - name: user-java
        image: registrytjp0542.azurecr.io/tripinsights/user_java:1.0
        ports:
        - containerPort: 80
