kubernetes/userprofile.yaml
apiVersion: v1
kind: Service
metadata:
  name: userprofile-service
  namespace: api
  labels:
    app: userprofile
spec:
  ports:
    - port: 80
  selector:
    app: userprofile
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userprofile-deployment
  namespace: api
  labels:
    app: userprofile
spec:
  selector:
    matchLabels:
      app: userprofile
  template:
    metadata:
      labels:
        app: userprofile
    spec:
      containers:
      - image: registrytjp0542.azurecr.io/tripinsights/userprofile:1.0
        name: userprofile
        ports:
        - containerPort: 80
          name: userprofile
